To fix  child to adult button wrapping

--- a/src/main/css/clinical-search.css
+++ b/src/main/css/clinical-search.css
@@ -16,7 +16,7 @@
     font-size: 14px;
     line-height: 26px;
     margin: 9px 0 37px;
-    padding: 0 26px;
+    padding: 0 21px;
     text-align: center;
 }
 
